# eecs

./: .gitignore  CMakeLists.txt  README.md
include/: component.h  eecs.h  eecs.inl  entity.h  entity_wrap.h  fnv1.h  functional.h  prefab.h  reflection.h  registry.h  sparse_set.h
samples/: basic_system.cpp  create_entity.cpp  perf.cpp  prefabs.cpp  query_component.cpp  query_entities.cpp  query_multiple_components.cpp
